Added searchview functionionality Filters list

--- a/app/src/main/res/menu/hoofd_menu.xml
+++ b/app/src/main/res/menu/hoofd_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/txt_mi_search"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always"></item>
+        app:showAsAction="always"/>
     <item
         android:id="@+id/mi_add"
         android:icon="@android:drawable/ic_menu_add"
